# Demo-Qt-QML

CustomQt/: CMakeLists.txt  main.cpp
DemoChatApp/: CMakeLists.txt  Main.qml  main.cpp
DemoChatApp/qml/: DeBox.qml  DeButton.qml  DeList.qml  DeTextBox.qml
DemoChatApp/source/: data.cpp  data.h  listmodel.cpp  listmodel.h
DemoChatServer/: CMakeLists.txt  main.cpp
DemoChatServer/source/: messageutils.cpp  messageutils.h  namedpipehandler.cpp  namedpipehandler.h  pipeclient.cpp  pipeclient.h  pipeserver.cpp  pipeserver.h
